--- a/conf/muchos.props.example
+++ b/conf/muchos.props.example
@@ -36,12 +36,12 @@ accumulo_instance = muchos
 # Accumluo Password
 accumulo_password = secret
 # Software versions (set sha-256 in conf/checksums)
-hadoop_version = 3.2.1
+hadoop_version = 2.9.2
 zookeeper_version = 3.4.14
 spark_version = 2.3.2
 fluo_version = 1.2.0
 fluo_yarn_version = 1.0.0
-accumulo_version = 2.1.0-SNAPSHOT
+accumulo_version = 1.10.0
 # Specifies if software should be downloaded. If 'False', tarballs of the software above should be in conf/upload/
 download_software = True
 # Install Hub (for GitHub)
